# my-evo-ai

./: .api_key  .coveragerc  .dockerignore  .env.example  .env.prod  .gitignore  .pre-commit-config.yaml  .ruff.toml  ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  AUDIT_REPORT_2026-06-09.md  AUTO-EVO-AI-Architecture.pptx  CHANGELOG.md  COMPETITIVE_ANALYSIS.md  COMPETITIVE_ANALYSIS_2026.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEPLOY.md  DEPLOY_USER.md  Dockerfile  EVALUATION-2026-05-27.md  GITHUB_AGENT_ANALYSIS.md  LICENSE  MANUAL.md  MODULE_CATALOG.md  MODULE_CLASSIFICATION.md  PERFORMANCE_REVIEW_2026-06-09.md  README.md  REFACTOR_GUIDE.md  RELEASE.md  ROADMAP-V0.2.md  ROADMAP.md  SECURITY.md  SETUP.md  SOLUTIONS.md  STUBS.md  SYSTEM_CONFIG.md  USER_MANUAL.md  _Modelfile_qwen36  __server_page.html  (+582 more)
.chroma_data/: chroma.sqlite3
.evo_data/: experience.db  github_scanner.db  module_actions_scan.json  prometheus_metrics.db-shm  prometheus_metrics.db-wal  trending_history.json  v.db  verify.db
.fix_bak_v7/: agent_orchestrator.py  atom_code.py  audio_transcription.py  awesome_design_md.py  cloud_connector.py  code_generator.py  code_sandbox.py  codebase_engine.py  config_manager.py  content_service.py  cross_platform_adapter.py  customer_chatbot.py  data_scraping.py  diff_viewer.py  email_automation.py  email_pro.py  enterprise_notifier.py  eve_learn.py  export_engine.py  form_builder.py  github_webhook.py  goose_coder.py  hyper_extract.py  incident_response.py  infra_as_code.py  log_manager.py  n8n_workflow_db.py  notification_center.py  obsidian_link.py  output_formatter.py  pdf_toolkit.py  permission_guard.py  rag_knowledge_engine.py  rag_pipeline.py  redis_cache.py  security_scanner.py  summarization_engine.py  windows_control.py  workflow_orchestrator.py
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit
.playwright-cli/: page-2026-05-14T00-38-35-344Z.yml  page-2026-05-14T00-45-05-149Z.yml  page-2026-05-14T00-47-54-112Z.yml  page-2026-05-14T00-55-31-373Z.yml
ARTICLES/: 5分钟构建日报助手.md
_data/: scheduler.json
api/: __init__.py  _config_loader.py  _data_store.py  _multi_worker.py  _paths.py  _prefix.py  _rbac.py  _response.py  _templates.py  agent_a2a.py  agent_airbyte.py  agent_ansible.py  agent_appsmith.py  agent_cal.py  agent_chatwoot.py  agent_claude.py  agent_composio.py  agent_concurrent.py  agent_coolify.py  agent_core.py  agent_directus.py  agent_docetl.py  agent_docuseal.py  agent_freshrss.py  agent_gems.py  agent_gitea.py  agent_grist.py  agent_heyform.py  agent_interpreter.py  agent_invoice.py  agent_langfuse.py  agent_legal.py  agent_lida.py  agent_listmonk.py  agent_llm.py  agent_markitdown.py  agent_mautic.py  agent_meilisearch.py  agent_minio.py  agent_mlflow.py  (+99 more)
benchmarks/: __init__.py  test_api_perf.py
config/: defaults.yaml
connectors/: integrations_db.json
js/: app.css  (+12 more)
(+1891 files in other folders)
