[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-evo-ai"
version = "0.1.0"
description = "上市公司级 AI 自动化编排系统"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "AUTO-EVO-AI Team" },
]

keywords = ["ai", "automation", "orchestration", "enterprise", "workflow"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.10.0",
    "requests>=2.32.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "psutil>=5.9.8",
    "PyYAML>=6.0",
    "scalar-fastapi>=1.8.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "google-generativeai>=0.8.0",
    "httpx>=0.27.0",
]
database = [
    "sqlalchemy>=2.0",
    "pymongo>=4.6",
    "psycopg2-binary>=2.9",
    "redis>=5.0.0",
    "clickhouse-connect>=0.7",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.5.0",
    "mypy>=1.11.0",
    "pre-commit>=3.7.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
]
docker = [
    "docker>=6.0",
]
all = [
    "auto-evo-ai[llm]",
    "auto-evo-ai[database]",
    "auto-evo-ai[docker]",
]

[project.urls]
Homepage = "https://github.com/haijunwu007007/my-evo-ai"
Repository = "https://github.com/haijunwu007007/my-evo-ai"
Documentation = "https://github.com/haijunwu007007/my-evo-ai"

[tool.setuptools.packages.find]
include = ["api*", "core*", "modules*"]
exclude = ["tests*", "_archive*"]

# ══════════════════════════════════════════════════
# NOTE: Ruff 配置统一在 .ruff.toml 中
# ══════════════════════════════════════════════════
# ══════════════════════════════════════════════════
# Type Checking — Mypy
# ══════════════════════════════════════════════════
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true

# ══════════════════════════════════════════════════
# Testing — Pytest
# ══════════════════════════════════════════════════
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: 慢测试，需要较长时间",
    "e2e: 端到端测试",
    "unit: 单元测试",
    "integration: 集成测试",
    "compliance: 模块合规测试",
    "benchmark: 性能基准测试",
]
